@@ -2151,19 +2151,6 @@ name|void
 name|reset
 parameter_list|()
 block|{
-name|fileTypes
-operator|=
-name|DEFAULT_FILE_TYPES
-expr_stmt|;
-name|globFileFilter
-operator|=
-name|this
-operator|.
-name|getFileFilterFromFileTypes
-argument_list|(
-name|fileTypes
-argument_list|)
-expr_stmt|;
 name|backlog
 operator|=
 operator|new
@@ -4329,13 +4316,8 @@ name|file
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|type
-operator|!=
-literal|null
-condition|)
-block|{
+comment|// TODO: Add a flag that disables /update and sends all to /update/extract, to avoid CSV, JSON, and XML files
+comment|// TODO: from being interpreted as Solr documents internally
 if|if
 condition|(
 name|type
@@ -4456,23 +4438,6 @@ argument_list|(
 name|urlStr
 argument_list|)
 expr_stmt|;
-block|}
-block|}
-else|else
-block|{
-name|warn
-argument_list|(
-literal|"Skipping "
-operator|+
-name|file
-operator|.
-name|getName
-argument_list|()
-operator|+
-literal|". Unsupported file type for auto mode."
-argument_list|)
-expr_stmt|;
-return|return;
 block|}
 block|}
 else|else
@@ -4652,7 +4617,7 @@ operator|)
 argument_list|)
 return|;
 block|}
-comment|/**    * Guesses the type of a file, based on file name suffix    * @param file the file    * @return the content-type guessed    */
+comment|/**    * Guesses the type of a file, based on file name suffix    * Returns "application/octet-stream" if no corresponding mimeMap type.    * @param file the file    * @return the content-type guessed    */
 DECL|method|guessType
 specifier|protected
 specifier|static
@@ -4688,7 +4653,9 @@ operator|+
 literal|1
 argument_list|)
 decl_stmt|;
-return|return
+name|String
+name|type
+init|=
 name|mimeMap
 operator|.
 name|get
@@ -4702,6 +4669,17 @@ operator|.
 name|ROOT
 argument_list|)
 argument_list|)
+decl_stmt|;
+return|return
+operator|(
+name|type
+operator|!=
+literal|null
+operator|)
+condition|?
+name|type
+else|:
+literal|"application/octet-stream"
 return|;
 block|}
 comment|/**    * Performs a simple get on the given URL    */
